FIX: overflow scroll

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,6 @@
 .card {
   border-radius: 12px;
-  overflow: hidden;
+  overflow: scroll;
   border: none;
 }
 
